Avoid search results overflow viewport in some condition

--- a/content/static/style.css
+++ b/content/static/style.css
@@ -592,6 +592,12 @@ blockquote::before {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
+@media screen and (min-width: 675px) {
+  .search-results {
+    max-width: 80vw;
+  }
+}
+
 .search-result-row-none {
   font-size: 0.8em;
   margin: 10px;
